--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc --build",
-    "start:dev": "nodemon ./src/app.ts"
+    "start:dev": "nodemon ./src/app.ts",
+    "dev": "tsc --noEmit && tsx ./src/app.ts"
   },
   "author": "",
   "license": "ISC",
@@ -14,6 +15,7 @@
     "@types/express": "^5.0.0",
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
+    "tsx": "^4.19.2",
     "typescript": "^5.7.2"
   },
   "dependencies": {
@@ -22,6 +24,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "mongoose": "^8.9.0",
     "morgan": "^1.10.0"
   }
 }
