--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc --build",
     "start:dev": "nodemon ./src/app.ts",
-    "dev": "tsc --noEmit && tsx ./src/app.ts"
+    "dev": "tsc --noEmit && tsx watch ./src/app.ts"
   },
   "author": "",
   "license": "ISC",
@@ -19,12 +19,15 @@
     "typescript": "^5.7.2"
   },
   "dependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/morgan": "^1.9.9",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "mongoose": "^8.9.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "zod": "^3.24.1"
   }
 }
