--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.0",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.9.16",
     "zod": "^3.24.1"
   }
 }
