--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "mongoose": "^8.9.0",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.16",
+    "razorpay": "^2.9.5",
     "zod": "^3.24.1"
   }
 }
