Fix stock after order cancellation

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,8 @@ services:
       dockerfile: Dockerfile
       target: production
     image: "faheem222/kenzstore:latest"
+    environment:
+      - FRONTEND_URL=https://www.kenzstore.faheem-mb.com
     expose:
       - '3001'
     ports:
