--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
   api-dev:
     build:
@@ -25,8 +23,9 @@ services:
       dockerfile: Dockerfile
       target: production
     image: "faheem222/kenzstore:latest"
-    environment:
-      - FRONTEND_URL=https://www.kenzstore.faheem-mb.com
+    # environment:
+    #   - FRONTEND_URL=https://www.kenzstore.faheem-mb.com
+    env_file: .env
     expose:
       - '3001'
     ports:
